test/asm/null-outside-string.err
error: Invalid character '0' after line continuation
    at null-outside-string.asm(3)
error: syntax error, unexpected number
    at null-outside-string.asm(3)
error: Invalid character '0' after line continuation
    at null-outside-string.asm(4)
error: syntax error, unexpected number
    at null-outside-string.asm(4)
error: Invalid character 'X' after line continuation
    at null-outside-string.asm(6)
error: syntax error, unexpected symbol
    at null-outside-string.asm(6)
error: Invalid character 'X' after line continuation
    at null-outside-string.asm(7)
error: syntax error, unexpected symbol
    at null-outside-string.asm(7)
Assembly aborted with 8 errors!
